<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fundo_app" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/cor_texto_app"
        android:text="@string/label_config_nome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp"
        android:textColor="@color/cor_texto_app"
        android:text="@string/label_config_host" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="25dp"
        android:textColor="@color/cor_texto_app"
        android:text="@string/label_login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="25dp"
        android:textColor="@color/cor_texto_app"
        android:text="@string/label_senha" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="25dp"
        android:textColor="@color/cor_texto_app"
        android:text="@string/label_config_chave" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="25dp"
        android:textColor="@color/cor_texto_app"
        android:text="@string/label_config_padrao" />

    <EditText
        android:id="@+id/editNomeConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:textColor="@color/cor_texto_app"
        android:layout_toRightOf="@+id/textView1"
        android:hint="@string/hint_nome_config"
        android:inputType="text" />

    <EditText
        android:id="@+id/editHostConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editNomeConfig"
        android:layout_alignParentRight="true"
        android:textColor="@color/cor_texto_app"
        android:hint="@string/hint_host_config"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/editEmailConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/editHostConfig"
        android:layout_alignRight="@+id/editHostConfig"
        android:textColor="@color/cor_texto_app"
        android:hint="@string/hint_email_config"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editSenhaConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/editEmailConfig"
        android:layout_alignRight="@+id/editEmailConfig"
        android:hint="@string/hint_senha_config"
        android:textColor="@color/cor_texto_app"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editChaveCriptoConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/editSenhaConfig"
        android:layout_alignRight="@+id/editSenhaConfig"
        android:textColor="@color/cor_texto_app"
        android:hint="@string/hint_chave_config"
        android:inputType="text" />

    <ToggleButton
        android:id="@+id/togglePadrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/editSenhaConfig"
        android:hint="@string/label_config_padrao"
        android:text="@string/label_config_padrao"
        android:textColor="@color/cor_texto_app"
        android:textOff="@string/label_nao"
        android:textOn="@string/label_sim" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:columnCount="3"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:padding="10dp"
        android:rowCount="1"
        android:stretchMode="columnWidth" >

        <Button
            android:id="@+id/btnSalvarConfig"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/back_dark_cyan"
            android:drawableTop="@drawable/save"
            android:text="@string/label_button_salvar"
            android:textColor="@color/cor_texto_app"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnExcluirConfig"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/back_crimson"
            android:drawableTop="@drawable/delete"
            android:text="@string/label_button_excluir"
            android:textColor="@color/cor_texto_app"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnVoltarConfig"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/back_green"
            android:drawableTop="@drawable/undo"
            android:text="@string/label_button_voltar"
            android:textColor="@color/cor_texto_app"
            android:textSize="14sp" />
    </GridLayout>

</RelativeLayout>