<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_app"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.orlandoburli.sinteli.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="@string/label_selecionar_config" />

    <Spinner
        android:id="@+id/spinnerConfig"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="29dp" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/btnConfiguracoes"
        android:layout_alignLeft="@+id/btnConfiguracoes"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_green"
        android:drawableLeft="@drawable/enter"
        android:text="@string/label_button_entrar"
        android:textColor="@color/cor_texto_app"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnConfiguracoes"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/btnSairGeral"
        android:layout_alignRight="@+id/btnSairGeral"
        android:layout_marginBottom="14dp"
        android:background="@drawable/back_dark_violet"
        android:drawableLeft="@drawable/home"
        android:text="@string/label_button_config"
        android:textColor="@color/cor_texto_app"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSairGeral"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/back_crimson"
        android:drawableLeft="@drawable/sair"
        android:text="@string/label_sair"
        android:textColor="@color/cor_texto_app"
        android:textSize="20sp" />

</RelativeLayout>