<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fundo_app" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/titulo_config"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="115dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dip" >

        <ListView
            android:id="@+id/listConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </RelativeLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:columnCount="2"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:rowCount="1"
        android:stretchMode="columnWidth"
        android:padding="10dp">

        <Button
            android:id="@+id/btnNovaConfiguracao"
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:background="@drawable/back_green"
            android:text="@string/label_button_novo"
            android:textColor="@color/cor_texto_app"
            android:drawableTop="@drawable/home_add"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnVoltarLogin"
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_orange"
            android:text="@string/label_button_voltar"
            android:textColor="@color/cor_texto_app"
            android:drawableTop="@drawable/undo"
            android:textSize="14sp" />
    </GridLayout>

</RelativeLayout>